--- a/html/myShop.html
+++ b/html/myShop.html
@@ -37,8 +37,8 @@
                 </select>
                 <select class="dis-shop-sort">
                     <option value="全部">默认排序</option>
-                    <option value="priceDesc">价格由低到高</option>
-                    <option value="priceAsc">价格由高到低</option>
+                    <option value="priceDesc">价格由高到低</option>
+                    <option value="priceAsc">价格由低到高</option>
                     <option value="salesDesc">销量由高到低</option>
                 </select>
                 <div class="dis-screen-btn">筛选</div>
