--- a/html/my.html
+++ b/html/my.html
@@ -159,7 +159,7 @@
         success: function (data) {
             if (data.result == 'success') {
                 var data = data.data;
-                console.log(data);
+//                console.log(data);
                 $('#my-content').html(b(data));
 
 //                var bindPhone=$('#bind-phone').length;
