--- a/html/goodsdetail.html
+++ b/html/goodsdetail.html
@@ -74,6 +74,7 @@
     <!--详情和评价具体内容-->
     <section class="goodsdetail-con">
         <!--详情图片-->
+        <!--详情图片-->
         <div class="goodsdetail-con-detail">
             <script type="text/x-handlebars-template" id="goodsdetail-con-detail">
                 {{#product}}
@@ -165,12 +166,57 @@
             </div>
         </div>
     </section>
+    <!--立即推广-->
+    <section class="wxmass-sends">
+        <section class="wxmass-sends-item">
+            <div class="wxmass-item-title">
+                <span class="cancel">取消</span>
+                <span>共9张</span>
+
+            </div>
+            <div class="wxmass-item-img">
+                <img src="../images/banner1.png" alt="">
+            </div>
+            <ul class="wxmass-item-list">
+                <li class="share-firends">
+                    <div class="wxmass-item-list-img">
+                        <img src="../images/sends1.png" alt="">
+                    </div>
+                    <span>发送给朋友</span>
+                    <div class="aui-col-xs-3 wxmass-col-xs-3">
+                        <i class="aui-iconfont aui-icon-right"></i>
+                    </div>
+                </li>
+                <li class="share-firends-quan">
+                    <div class="wxmass-item-list-img">
+                        <img src="../images/sends2.png" alt="">
+                    </div>
+                    <span>分享到朋友圈</span>
+                    <div class="aui-col-xs-3 wxmass-col-xs-3">
+                        <i class="aui-iconfont aui-icon-right"></i>
+                    </div>
+                </li>
+                <!--<li class="no-border">-->
+                <!--<div class="wxmass-item-list-img">-->
+                <!--<img src="../images/sends3.png" alt="">-->
+                <!--</div>-->
+                <!--<span>收藏</span>-->
+                <!--<div class="aui-col-xs-3 wxmass-col-xs-3">-->
+                <!--<i class="aui-iconfont aui-icon-right"></i>-->
+                <!--</div>-->
+                <!--</li>-->
+            </ul>
+        </section>
+    </section>
     <!--底部购物车-->
    <!-- <footer class="goodsdetail-footer">
         <div class="goodsdetail-footer-gwc"><img src="../images/gwc.png" alt=""></div>
         <div class="goodsdetail-footer-join"><span>加入购物车</span></div>
         <div class="goodsdetail-footer-buy"><span>立刻购买</span></div>
     </footer>-->
+</section>
+<section class="share-loading">
+    <img src="../images/loading.gif" alt="">
 </section>
 <script src="../js/jquery-3.0.0.min.js"></script>
 <script src="../js/api.2.0.js"></script>
