--- a/html/addaddress.html
+++ b/html/addaddress.html
@@ -54,6 +54,7 @@
 <script src="../js/LArea.min.js"></script>
 <script src="../js/config.js"></script>
 <script src="../js/common.js"></script>
+<script src="../js/function.js"></script>
 <script src="../js/addAddress.js"></script>
 </body>
 </html>
