--- a/html/bindingtel.html
+++ b/html/bindingtel.html
@@ -46,6 +46,7 @@
 <script src="../js/jquery-3.0.0.min.js"></script>
 <script src="../js/common.js"></script>
 <script src="../js/config.js"></script>
+<script src="../js/function.js"></script>
 <script src="../js/gVerify.js"></script>
 <script src="../js/bindingtel.js"></script>
 </body>
