--- a/html/myShop.html
+++ b/html/myShop.html
@@ -221,6 +221,9 @@
         </section>
     </section>
 </section>
+<section class="share-loading">
+    <img src="../images/loading.gif" alt="">
+</section>
 <script src="../js/jquery-3.0.0.min.js"></script>
 <!--<script src="../js/api.2.0.js"></script>-->
 <script src="../js/handlebars-v4.0.10.js"></script>
