--- a/html/friends.html
+++ b/html/friends.html
@@ -211,7 +211,8 @@
 
 
                 }else if (response.result=='login'){
-                    alert('请重新登录');
+                    alert('登入过期，请重新登入！');
+                    againLogin();
                 }else {
                     alert(response.errorMsg);
                 }
