--- a/html/teamadmin.html
+++ b/html/teamadmin.html
@@ -59,7 +59,8 @@
                 var data=data.data;
                 $('.member-info-entry').html(b(data))
             }else if(data.result=='login'){
-                alert(data.errorMsg)
+                alert('登入过期，请重新登入！');
+                againLogin();
             }else {
                 alert(data.errorMsg)
             }
