--- a/html/myShop.html
+++ b/html/myShop.html
@@ -135,7 +135,7 @@
                         <i class="aui-iconfont aui-icon-right"></i>
                     </div>
                 </li>
-                <li class="no-border">
+                <!--<li class="no-border">
                     <div class="wxmass-item-list-img">
                         <img src="../images/sends3.png" alt="">
                     </div>
@@ -143,7 +143,7 @@
                     <div class="aui-col-xs-3 wxmass-col-xs-3">
                         <i class="aui-iconfont aui-icon-right"></i>
                     </div>
-                </li>
+                </li>-->
             </ul>
         </section>
 
