--- a/html/transuccess.html
+++ b/html/transuccess.html
@@ -14,7 +14,7 @@
 <body>
 <!--头部-->
 <header class="aui-bar aui-bar-nav" id="aui-header">
-    <div class="aui-col-xs-3 my-col-xs-3">
+    <div class="aui-col-xs-3 my-col-xs-3 back-member">
         <i class="aui-iconfont aui-icon-left"></i>
     </div>
     <div class="aui-title my-aui-title">销售管理</div>
@@ -119,7 +119,7 @@
 <script src="../js/api.2.0.js"></script>
 <script src="../js/handlebars-v4.0.10.js"></script>
 <script src="../js/config.js"></script>
-<script src="../js/common.js"></script>
+<script src="../js/deal_common.js"></script>
 <script src="../js/transuccess.js"></script>
 
 </body>
