--- a/html/friends.html
+++ b/html/friends.html
@@ -22,7 +22,7 @@
         <ul class="friends-box-content" id="friends-box">
             <script type="text/x-handlebars-template" id="friends-box-template">
                 {{#each product}}
-                <li>
+                <li id="product-id" data-id="{{id}}">
                     <!--朋友圈具体内容-->
                     <div class="friends-box-detail">
                         <h3 class="friends-detail-user">小一</h3>
@@ -174,6 +174,7 @@
 
                         var imgUrls=$(this).siblings('.friends-box-detail-ul').find('li');
 
+                        var shareId=$(this).parents('#product-id').data('id');
                         imgUrls.each(function () {
                             var imgUrl=($(this).find('img').attr('src'));
                             shareInfo.push(imgUrl);
@@ -185,7 +186,8 @@
                         var shareQuan={
                             postType:'shareFriendQuan',
                             shareImgInfo:shareInfo,
-                            shareText:shareText
+                            shareText:shareText,
+                            shareId:shareId
                         };
 
                         var ua = navigator.userAgent.toLowerCase();
