--- a/html/goodsdetail.html
+++ b/html/goodsdetail.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/aui.2.0.css">
     <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="../css/common1.css">
+    <link rel="stylesheet" href="../css/alert.css">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/aui-slide.css">
     <link rel="stylesheet" href="../css/goodsdetail.css">
@@ -222,6 +223,7 @@
 <script src="../js/api.2.0.js"></script>
 <script src="../js/aui-slide.js"></script>
 <script src="../js/config.js"></script>
+<script src="../js/alert.js"></script>
 <script src="../js/function.js"></script>
 <script src="../js/handlebars-v4.0.10.js"></script>
 <script src="../js/common.js"></script>
