--- a/html/selected.html
+++ b/html/selected.html
@@ -7,6 +7,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="../css/aui.2.0.css">
     <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/alert.css">
     <link rel="stylesheet" href="../css/common1.css">
     <link rel="stylesheet" href="../css/common.css">
 </head>
@@ -137,10 +138,12 @@
 <script src="../js/jquery-3.0.0.min.js"></script>
 <script src="../js/api.2.0.js"></script>
 <script src="../js/config.js"></script>
+<script src="../js/alert.js"></script>
 <script src="../js/aui-lazyload.js"></script>
 <script src="../js/function.js"></script>
 <script src="../js/handlebars-v4.0.10.js"></script>
 <script src="../js/common.js"></script>
+
 <!--<script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>-->
 <script src="../js/selected.js"></script>
 <script>
@@ -207,8 +210,7 @@
                     flag=0;
 
                     //这里添加立即推广事件
-                    $('.now-tuiguang').one('click',nowTuiGuang);
-
+                    $('.dis-sale ').bind('click',nowTuiGuang);
 
                 }else {
                     alert(response.errorMsg);
@@ -222,27 +224,12 @@
     function nowTuiGuang(event) {
         event.preventDefault();
         event.stopPropagation();
+        var loading=dialog.loading();
         var that=$(this);
         var thisPapa=that.parents('.dis-list-box');
         var thisImg=thisPapa.find('.dis-shop-img').find('img').attr('src');
         var shareProductId=thisPapa.data('productid');
         localStorage.setItem('shareId',shareProductId);
-
-        $('.wxmass-item-img').find('img').attr('src',thisImg);
-        $('.wxmass-sends').show();
-
-        $('.share-firends').one('click',function (event) {
-            shareFrends(event,'1');
-        });
-
-        $('.share-firends-quan').one('click',function (event) {
-            shareFrends(event,'2');
-        });
-    }
-
-    //分享朋友圈
-    function shareFrends(event,type) {
-        event.stopPropagation();
 
         var productId=localStorage.getItem('shareId');
         $.ajax({
@@ -252,6 +239,89 @@
             data:{
                 token:C.marketToken,
                 productId:productId
+            },
+            complete:function () {
+                loading.close();
+            },
+            success:function (response) {
+                if (response.result=='success'){
+                    //console.log(response.data);
+                    var imgUrl=response.data.imgUrl;
+                    var url=response.data.url;
+                    var title=response.data.title;
+                    var content=response.data.content;
+
+                    $('.wxmass-item-img').find('img').attr('src',thisImg);
+                    $('.wxmass-sends').show();
+
+                    $('.share-firends').one('click',function (event) {
+                        getShareData(event,'1');
+                    });
+
+                    $('.share-firends-quan').one('click',function (event) {
+                        getShareData(event,'2');
+                    });
+
+                    function getShareData(event, type) {
+                        var data={
+                            postType:'shareProducts',
+                            productId:productId,
+                            type:type,
+                            url:url,
+                            imgUrl:String(imgUrl),
+                            title:title,
+                            content:content
+                        };
+                        console.log(data);
+                        var ua = navigator.userAgent.toLowerCase();
+                        if (/iphone|ipad|ipod/.test(ua)) {
+
+                            iosShare(data);
+                            event.stopPropagation();
+                        } else {
+                            //console.log(JSON.stringify(data));
+                            androidShare(JSON.stringify(data));
+                            event.stopPropagation();
+                        }
+                    }
+                    
+
+                }else if (response.result=='login'){
+                    alert('登入过期，请重新登入！');
+                    againLogin();
+                }else {
+                    alert(response.errorMsg);
+                }
+            },
+            error:function () {
+                alert('服务器异常');
+            }
+        });
+
+
+
+
+
+    }
+
+    //分享朋友圈
+    function shareFrends(event,type) {
+        event.stopPropagation();
+
+
+
+
+        var productId=localStorage.getItem('shareId');
+        $.ajax({
+            url:C.marketInterface.shareFriend,
+            type:'get',
+            dataType:'json',
+            data:{
+                token:C.marketToken,
+                productId:productId
+            },
+            complete:function () {
+                loading.close();
             },
             success:function (response) {
                 if (response.result=='success'){
