修改图片尺寸

--- a/html/commodity.html
+++ b/html/commodity.html
@@ -88,10 +88,13 @@
                         </div>
                         <div class="dis-evaluate">
                             <span>{{totalFeedback}}评价</span>
-                            <span>好评 <span>{{percentFeedback}}</span></span>
+                            <span>好评 <span>{{percentFeedback}}%</span></span>
                         </div>
-                        <div class="dis-sale">
-                            <span class="now-tuiguang">立即推广</span>
+                        <div class="dis-del-sale">
+                            <div class="dis-del"></div>
+                            <div class="dis-sale ">
+                                <span class="now-tuiguang">立即推广</span>
+                            </div>
                         </div>
                     </div>
                 </div>
